made changes to move audit repository to SPI